fix: weird overflow

--- a/src/index.less
+++ b/src/index.less
@@ -34,14 +34,14 @@ html {
 }
 
 body {
-  height: 100vh;
+  height: fit-content;
 }
 
 .main {
   display: flex;
   flex-direction: column;
   gap: 20px;
-  height: 100vh;
+  height: 96.5vh;
 }
 
 .site-header {
@@ -82,7 +82,6 @@ body {
     display: flex;
     justify-content: space-between;
     width: 100%;
-    padding-bottom: 10px;
 
     a {
       font-size: 16px;
